Fix analysis tree toggle row vertical alignment

--- a/static/site.css
+++ b/static/site.css
@@ -1254,7 +1254,7 @@ span.notification.empty span.text {
 #sound-volume {
   width: 90%;
 }
-#settings div.labelled, div.labelled, div.arrow-toggle, div.infiniteAnalysis-toggle, div.nnue-toggle, div.fsfDebug-toggle, div.alice-mirror-toggle {
+#settings div.labelled, div.labelled, div.arrow-toggle, div.inlineNotation-toggle, div.disclosureMode-toggle, div.infiniteAnalysis-toggle, div.nnue-toggle, div.fsfDebug-toggle, div.alice-mirror-toggle {
   display: flex;
   align-items: center;
   flex-direction: row;
